--- a/minidlna.conf
+++ b/minidlna.conf
@@ -49,7 +49,7 @@ db_dir=/cache
 #
 # The default is to log all types of messages at the "warn" level.
 #log_level=general,artwork,database,inotify,scanner,metadata,http,ssdp,tivo=warn
-log_level=fatal
+log_level=error
 
 # Use a different container as the root of the directory tree presented to
 # clients. The possible values are:
