removed non-needed options from conf. Better start script

--- a/minidlna.conf
+++ b/minidlna.conf
@@ -6,33 +6,16 @@
 # On Debian, you can also refer to the minidlna.conf(5) man page for
 # documentation about this file.
 
-# Specify the user name or uid to run as.
-#user=minidlna
-
-
-# Path to the directory you want scanned for media files.
-#
-# This option can be specified more than once if you want multiple directories
-# scanned.
-#
-# If you want to restrict a media_dir to a specific content type, you can
-# prepend the directory name with a letter representing the type (A, P or V),
-# followed by a comma, as so:
-#   * "A" for audio    (eg. media_dir=A,/var/lib/minidlna/music)
-#   * "P" for pictures (eg. media_dir=P,/var/lib/minidlna/pictures)
-#   * "V" for video    (eg. media_dir=V,/var/lib/minidlna/videos)
-#   * "PV" for pictures and video (eg. media_dir=PV,/var/lib/minidlna/digital_camera)
-#media_dir=V,/media
+# Specify the uid to run as.
+#user=0
 
 # Set this to merge all media_dir base contents into the root container
 # (The default is no.)
 #merge_media_dirs=no
 
 # Path to the directory that should hold the database and album art cache.
+# DO NOT CHANGE IT.
 db_dir=/cache
-
-# Path to the directory that should hold the log file.
-#log_dir=/var/log
 
 # Type and minimum level of importance of messages to be logged.
 #
@@ -68,21 +51,8 @@ log_level=error
 # This option can be specified more than once.
 #network_interface=
 
-# Port number for HTTP traffic (descriptions, SOAP, media transfer).
-# This option is mandatory (or it must be specified on the command-line using
-# "-p").
-#port=8200
-
 # URL presented to clients (e.g. http://example.com:80).
 #presentation_url=/
-
-# Name that the DLNA server presents to clients.
-# Defaults to "hostname: username".
-#friendly_name=ReadyMedia
-
-# Serial number the server reports to clients.
-# Defaults to 00000000.
-#serial=681019810597110
 
 # Model name the server reports to clients.
 #model_name=Windows Media Connect compatible (MiniDLNA)
@@ -111,9 +81,6 @@ album_art_names=Folder.jpg/folder.jpg/Thumb.jpg/thumb.jpg
 
 # Notify interval, in seconds.
 notify_interval=895
-
-# Path to the MiniSSDPd socket, for MiniSSDPd support.
-#minissdpdsocket=/run/minissdpd.sock
 
 # Always set SortCriteria to this value, regardless of the SortCriteria
 # passed by the client
